tinyc/test/bad/init-struct-scalar.c
struct s
{
    int x;
};

int main()
{
    struct s s = 2;

    return 0;
}
